--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -20,3 +20,11 @@
   -moz-box-shadow: 0px 0px 15px 0px rgba(255,0,0,1);
   box-shadow: 0px 0px 15px 0px rgba(255,0,0,1);
 }
+
+.container {
+  visibility: hidden;
+}
+
+.container-loaded {
+  visibility: visible;
+}
