--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -1,12 +1,29 @@
+.title {
+  color: #000;
+  font-weight: bold;
+  text-align: center;
+}
+
+.cards-container {
+  height: 300px;
+  margin-bottom: 50px;
+  overflow-x: scroll;
+  overflow-y: visible;
+  position: relative;
+}
+
 .card {
   background-color: #fff;
   border: 1px solid #eee;
   border-radius: 5px;
+  bottom: 0;
   cursor: pointer;
   display: inline-block;
   margin: 0 10px;
-  width: 75px;
+  position: absolute;
+  width: 40%;
   transition: all .3s;
+  z-index: 100;
 }
 
 .card:hover {
@@ -16,7 +33,8 @@
 }
 
 .card.card-selected {
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(255,0,0,1);
-  -moz-box-shadow: 0px 0px 15px 0px rgba(255,0,0,1);
-  box-shadow: 0px 0px 15px 0px rgba(255,0,0,1);
+  -webkit-box-shadow: 0px 0px 15px 0px #00bc8c;
+  -moz-box-shadow: 0px 0px 15px 0px #00bc8c;
+  box-shadow: 0px 0px 15px 0px #00bc8c;
+  transform: translateY(-50px);
 }
