--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -54,6 +54,8 @@
   -moz-box-shadow: 0px 0px 15px 0px #00bc8c;
   box-shadow: 0px 0px 15px 0px #00bc8c;
   transform: translateY(-50px);
+  -webkit-transform: translateY(-50px);
+  -moz-transform: translateY(-50px);
 }
 
 .logo {
